...
    Scaffold(
        topBar = {
            TopAppBar(
                title = {
                    Text(
                        text = when (state.currentTab) {
                            Tab.TEMPLATES -> "Templates"
                            Tab.ACTIVE_CHECKLISTS -> "Active Checklists"
                            Tab.CURRENT_CHECKLIST -> "Current Checklist"
                        }
                    )
                },
                actions = {
...
